--- a/samplersFramework/src/main/AndroidManifest.xml
+++ b/samplersFramework/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:theme="@style/AppTheme">
 
         </activity>
+        <service android:name=".service.RecordingService" />
     </application>
 
 </manifest>
