--- a/samplersFramework/build.gradle
+++ b/samplersFramework/build.gradle
@@ -29,19 +29,21 @@ dependencies {
     })
 
     // Android dependencies
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
+    //card view for media playback
+    
 
     // Test dependencies
-    testCompile 'junit:junit:4.12'
-
+    
     // Libraries dependencies
-    compile ('com.google.android.gms:play-services-location:10.2.1')
-    compile ('com.google.android.gms:play-services-maps:10.2.1')
-
+    
     // Added manually as libraries (.jar in libs folder)
     //compile 'com.google.code.gson:gson:2.8.0'
     //compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    testCompile 'junit:junit:4.12'
 }
